# docs/swagger.json
@@ -4,6 +4,31 @@
         "contact": {}
     },
     "paths": {
+        "/send/code": {
+            "post": {
+                "tags": [
+                    "公共方法"
+                ],
+                "summary": "发送邮件验证码",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":\"200\",\"data\":\"\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user-info": {
             "get": {
                 "tags": [
